--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <name>Yu-Chun Ting (丁友鈞) </name>&nbsp&nbsp;
               </p>
               <p>I will be joining Google in January 2026 as a Multimedia Machine Learning System Architect.
-                I recieved the BS degree in EECS and PhD degree in EE from National Tsing Hua University, Taiwan. 
+                I recieved the BS degree in EECS and the PhD degree in EE from National Tsing Hua University, Taiwan. 
                 My research interests include algorithm-hardware co-optimization and energy-efficient VLSI architecture design for image processing, computer vision, and deep learning applications.</p>
               <p>I have a strong publication record as the first author of papers in top-tier conferences, such as ISSCC and ESSCIRC, and leading journals, including JSSC and IEEE Access. Additionally, I have co-authored several publications in other prestigious venues like MICRO, ISICAS, TCAS-I, and SSC-L. I have hands-on experience in developing real-time chip and FPGA SoC demonstration platforms and have led digital VLSI circuit tape-out projects using cell-based design flow in 40nm and 16nm. </p>
               </p>
