--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <td style="padding:2.5%;width:30%;max-width:30%">
               <a href="pics/ding.jpg"><img style="width:80%;max-width:80%" alt="profile photo" src="pics/ding.jpg" class="hoverZoomLink"></a>
                 <br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Email: 
-                <!-- <br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ycding@gapp.nthu.edu.tw -->
+                <br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ycding@gapp.nthu.edu.tw
                 <br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ycting0423@gmail.com
             </td>
           </tr>
