--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
           <li> 2022 First Prize, Cell-based Digital Circuit Design Category, Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
           <li> 2021 Third Prize, Cell-based Digital Circuit Design Category, Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
           <li> 2020 Second Prize, Cell-based Digital Circuit Design Category, Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
-          <li> 2020 Honorary Membership, National Tsing Hua University, The Phi Tau Phi Scholastic Honor Society of the Republic of China Membership </li>
+          <li> 2020 Honorary Membership, The Phi Tau Phi Scholastic Honor Society of the Republic of China Membership </li>
           <li> 2020 Special Award for Award-Winning Papers in International Conferences, National Tsing Hua University </li>
           <li> 2020 Honorable Mention Award, 20th Macronix Golden Silicon Awards, Macronix Education Fundation </li>
           <li> 2018 Third Prize, Cell-based Digital Circuit Design Category, Integrated Circuits Design Contest, Ministry of Education, Taiwan </li>
